Fixed z-index

--- a/nootstrap/sass/_position.sass
+++ b/nootstrap/sass/_position.sass
@@ -1,6 +1,7 @@
 .fixed
     position: fixed
     width: 100%
+    z-index: 100
 
 .fixed-top
     @extend .fixed
